<resources>
    <string name="app_name">LoveDiary</string>
    <string name="click_to_show">Click to show</string>
    <string name="password_correct">Password correct</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_password">Set Password</string>
    <string name="compose_title">Compose</string>
    <string name="enter_new_password">Nhập mật khẩu mới</string>
    <string name="enter_old_password">Nhập mật khẩu cũ</string>
    <string name="error_pass">Mật khẩu không đúng</string>
    <string name="enter_repeat_pass">Nhập lại mật khẩu mới</string>
    <string name="set_pass_succes">Đổi mật khẩu thành công</string>
    <string name="title_hint">Tiêu đề</string>
    <string name="content_hint">Nội dung nhật kí</string>
    <string name="set_time_write">Hẹn thời gian viết</string>
    <string name="sync">Đồng bộ dữ liệu</string>
    <string name="name_register">Tên tài khoản</string>
    <string name="pass_register">Mật khẩu</string>
    <string name="repass_register">Nhập lại mật khẩu</string>
    <string name="phone_register">Số điện thoại</string>
    <string name="remove_register">Xóa thông tin</string>
    <string name="register">Đăng kí</string>
    <string name="empty_title">Bạn chưa nhập tiêu đề</string>
    <string name="empty_content">Bạn chưa nhập nội dung</string>
    <string name="tittle_register">Đăng kí tài khoản</string>
    <string name="error_repass">Mật khẩu nhập lại không đúng</string>
    <string name="name_duplicate">Tên đăng kí bị trùng</string>
    <string name="name_empty">Bạn chưa nhập tên tài khoản</string>
    <string name="little_pass">Mật khẩu phải có ít nhất 4 kí tự</string>
    <string name="register_success">Tạo tài khoản thành công</string>
    <string name="tittle_sign">Đăng nhập</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="no_account">Không tồn tại tài khoản</string>
    <string name="pass_empty">Bạn chưa điền mật khẩu</string>
    <string name="incorrect_number">Số điện thoại chỉ có 10 hoặc 11 số</string>
    <string name="you_are">Bạn là?</string>
    <string name="man">Nam</string>
    <string name="woman">Nữ</string>
    <string name="phone_duplicate">Đã có người đăng kí số điện thoại này</string>
    <string name="up_data">Tải dữ liệu lên</string>
    <string name="down_data">Lấy dữ liệu về máy</string>
    <string name="set_pass">Thiết lập mật khẩu thàng công</string>
    <string name="set_pass_first">Tạo mới mật khẩu</string>
</resources>
