<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/name"
        style="@style/editText_register"
        android:hint="@string/name_register" />

    <EditText
        android:id="@+id/pass"
        style="@style/editText_register"
        android:hint="@string/pass_register"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repass"
        style="@style/editText_register"
        android:hint="@string/repass_register"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/remove"
            style="@style/button_remove_register"
            android:layout_marginLeft="50dp"
            android:text="@string/remove_register"
            android:textColor="#cddc39" />

        <Button
            android:id="@+id/register"
            style="@style/button_register"
            android:layout_marginLeft="50dp"
            android:text="@string/register"
            android:textColor="#cddc39" />

    </LinearLayout>
</LinearLayout>


