<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="50dp"
            android:id="@+id/name"
            style="@style/editText_register"
            android:hint="@string/name_register" />

        <EditText
            android:id="@+id/pass"
            style="@style/editText_register"
            android:hint="@string/pass_register"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in"
            style="@style/button_register"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textColor="#cddc39" />

    </LinearLayout>



    <Button
        android:id="@+id/register"
        style="@style/button_register"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"
        android:background="@color/orange"
        android:textColor="#fff" />


</RelativeLayout>