<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/conv_list_padding"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/man_avatar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/you_are"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/man"
            style="@style/button_man_style"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_man_seletor"
            android:text="@string/man" />

        <Button
            android:id="@+id/woman"
            style="@style/button_man_style"
            android:background="@drawable/button_woman_selector"
            android:layout_marginLeft="16dp"
            android:text="@string/woman" />
    </LinearLayout>
</LinearLayout>